--- a/self_study_project/templates/index.html
+++ b/self_study_project/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="speechContainer">
-        <h1>Upload new File</h1>
+        <h1>Upload a wav File</h1>
         <form method="POST" enctype="multipart/form-data">
             <input type="file" name ="file">
             <br>
